--- a/index.html
+++ b/index.html
@@ -35,14 +35,7 @@
 
         <div class="main-menu">
           <ul>
-            <li><a href="javascript:void(0)">terrain following</a>
-              <ul>
-                <li><a href="javascript:void(0)">Item 1</a></li>
-                <li><a href="javascript:void(0)">Item 2</a></li>
-                <li><a href="javascript:void(0)">Item 3</a></li>
-                <li><a href="javascript:void(0)">Item 4</a></li>
-              </ul>
-            </li>
+            <li><a href="javascript:void(0)">terrain following</a></li>
             <li><a href="javascript:void(0)">delete plan</a></li>
             <li><a href="javascript:void(0)">download KML</a></li>
             <li><a href="javascript:void(0)">download plan</a></li>
@@ -50,6 +43,7 @@
         </div>
           
         <a href="javascript:void(0)" id="nav-toggle" class="mobile-menu-btn">
+          Options
           <svg class="fill-current" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
               <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"></path>
           </svg>
@@ -853,39 +847,39 @@
                             <tbody>
                               <tr>
                                   <td>File integrety</td>
-                                  <td><i class="icons fas fa-check-circle"></i> Passed</td>
+                                  <td><i class="icons fas fa-check-circle"></i> <span class="d-block d-lg-none">Passed</span></td>
                               </tr>
                               <tr>
                                   <td>Terrain elevation</td>
-                                  <td><i class="icons fas fa-check-circle"></i> Passed</td>
+                                  <td><i class="icons fas fa-check-circle"></i> <span class="d-block d-lg-none">Passed</span></td>
                               </tr>
                               <tr>
                                   <td>Gradients</td>
-                                  <td><i class="icons fas fa-check-circle"></i> Passed</td>
+                                  <td><i class="icons fas fa-check-circle"></i> <span class="d-block d-lg-none">Passed</span></td>
                               </tr>
                               <tr>
                                   <td>Takeoff and Landing</td>
-                                  <td><i class="icons fas fa-times-circle"></i> Failed</td>
+                                  <td><i class="icons fas fa-times-circle"></i> <span class="d-block d-lg-none">Failed</span></td>
                               </tr>
                               <tr>
                                   <td>Mission sanity</td>
-                                  <td><i class="icons fas fa-exclamation-triangle"></i> Warning</td>
+                                  <td><i class="icons fas fa-exclamation-triangle"></i> <span class="d-block d-lg-none">Warning</span></td>
                               </tr>
                               <tr>
                                   <td>Flight heights</td>
-                                  <td><i class="icons fas fa-check-circle"></i> Passed</td>
+                                  <td><i class="icons fas fa-check-circle"></i> <span class="d-block d-lg-none">Passed</span></td>
                               </tr>
                               <tr>
                                   <td>Mission feasibility</td>
-                                  <td><i class="icons fas fa-check-circle"></i> Passed</td>
+                                  <td><i class="icons fas fa-check-circle"></i> <span class="d-block d-lg-none">Passed</span></td>
                               </tr>
                               <tr>
                                   <td>Weather conditions</td>
-                                  <td><i class="icons fas fa-check-circle"></i> Passed</td>
+                                  <td><i class="icons fas fa-check-circle"></i> <span class="d-block d-lg-none">Passed</span></td>
                               </tr>
                               <tr>
                                   <td>No-Fly zones</td>
-                                  <td><i class="icons fas fa-check-circle"></i> Passed</td>
+                                  <td><i class="icons fas fa-check-circle"></i> <span class="d-block d-lg-none">Passed</span></td>
                               </tr>
                             </tbody>
                         </table>
