--- a/index.html
+++ b/index.html
@@ -847,39 +847,39 @@
                             <tbody>
                               <tr>
                                   <td>File integrety</td>
-                                  <td><i class="icons fas fa-check-circle"></i> <span class="d-block d-lg-none">Passed</span></td>
+                                  <td><i class="icons fas fa-check-circle"></i> <span class="d-inline-block d-lg-none">Passed</span></td>
                               </tr>
                               <tr>
                                   <td>Terrain elevation</td>
-                                  <td><i class="icons fas fa-check-circle"></i> <span class="d-block d-lg-none">Passed</span></td>
+                                  <td><i class="icons fas fa-check-circle"></i> <span class="d-inline-block d-lg-none">Passed</span></td>
                               </tr>
                               <tr>
                                   <td>Gradients</td>
-                                  <td><i class="icons fas fa-check-circle"></i> <span class="d-block d-lg-none">Passed</span></td>
+                                  <td><i class="icons fas fa-check-circle"></i> <span class="d-inline-block d-lg-none">Passed</span></td>
                               </tr>
                               <tr>
                                   <td>Takeoff and Landing</td>
-                                  <td><i class="icons fas fa-times-circle"></i> <span class="d-block d-lg-none">Failed</span></td>
+                                  <td><i class="icons fas fa-times-circle"></i> <span class="d-inline-block d-lg-none">Failed</span></td>
                               </tr>
                               <tr>
                                   <td>Mission sanity</td>
-                                  <td><i class="icons fas fa-exclamation-triangle"></i> <span class="d-block d-lg-none">Warning</span></td>
+                                  <td><i class="icons fas fa-exclamation-triangle"></i> <span class="d-inline-block d-lg-none">Warning</span></td>
                               </tr>
                               <tr>
                                   <td>Flight heights</td>
-                                  <td><i class="icons fas fa-check-circle"></i> <span class="d-block d-lg-none">Passed</span></td>
+                                  <td><i class="icons fas fa-check-circle"></i> <span class="d-inline-block d-lg-none">Passed</span></td>
                               </tr>
                               <tr>
                                   <td>Mission feasibility</td>
-                                  <td><i class="icons fas fa-check-circle"></i> <span class="d-block d-lg-none">Passed</span></td>
+                                  <td><i class="icons fas fa-check-circle"></i> <span class="d-inline-block d-lg-none">Passed</span></td>
                               </tr>
                               <tr>
                                   <td>Weather conditions</td>
-                                  <td><i class="icons fas fa-check-circle"></i> <span class="d-block d-lg-none">Passed</span></td>
+                                  <td><i class="icons fas fa-check-circle"></i> <span class="d-inline-block d-lg-none">Passed</span></td>
                               </tr>
                               <tr>
                                   <td>No-Fly zones</td>
-                                  <td><i class="icons fas fa-check-circle"></i> <span class="d-block d-lg-none">Passed</span></td>
+                                  <td><i class="icons fas fa-check-circle"></i> <span class="d-inline-block d-lg-none">Passed</span></td>
                               </tr>
                             </tbody>
                         </table>
